# scef

./: .gitignore  CMakeLists.txt  README.md
browser/: build.py  index.html
browser/src/: app.js  crypto.js  download.js  filetable.js  header.js  kdf.js  style.css  ui.js
browser/test/: generate_vectors.cpp  test_crypto_node.js  test_download_node.js  test_e2e_unlock_node.js  test_filetable_node.js  test_header_node.js  test_vectors.json
docs/: README.md  architecture.md  browser-viewer.md  cli.md  container-format.md  data-flows.md  gui.md  performance-review-fixes.md
docs/api/: scef-lib.md
docs/figures/: README.md  compose_two_row_flow.py  export_png.ps1  mermaid-config.json
docs/figures/src/: architecture_01_module-map.mmd  architecture_02_component-responsibilities.mmd  browser-viewer_01_module-architecture.mmd  browser-viewer_02_unlock-flow.mmd  container-format_01a_overview-top.mmd  container-format_01b_overview-bottom.mmd  data-flows_01_key-derivation-flow.mmd  data-flows_02a_container-creation-init.mmd  data-flows_02b_container-creation-data.mmd  data-flows_03a_add-file-prepare.mmd  data-flows_03b_add-file-write.mmd  data-flows_04a_open-container-init.mmd  data-flows_04b_open-container-loop.mmd  data-flows_04c_open-container-outcome.mmd  data-flows_05a_extract-select.mmd  data-flows_05b_extract-verify.mmd  data-flows_06a_header-sync-prepare.mmd  data-flows_06b_header-sync-write.mmd  data-flows_07_wrap-on-create.mmd  data-flows_08_unwrap-on-open.mmd  gui_01_architecture.mmd  gui_02_main-qml.mmd
gui/: CMakeLists.txt  DriveListModel.cpp  DriveListModel.h  FileListModel.cpp  FileListModel.h  ScefController.cpp  ScefController.h  main.cpp
gui/qml/: CreatePage.qml  FileListPage.qml  LogsPage.qml  Main.qml  PasswordDialog.qml  StartPage.qml  utils.js
include/: BenchMeasurerGuard.h  BoundedQueue.h  BrowserViewer.h  ContainerName.h  CryptoContext.h  CryptoManager.h  DecryptPipeline.h  EncryptPipeline.h  FileManager.h  FileTable.h  FragmentedIO.h  Header.h  KdfProfiles.h  Logger.h  NativeFile.h  PasswordStrengthEstimator.h  PipelineTypes.h
include/enums/: ECiphers.h  EHash.h  EKDF.h  EKDFProfile.h
installer/: .gitignore  Package.wxs  README.md  build_installer.ps1
installer/assets/: LICENSE.rtf
review/: refactoring_plan.md
review/codex/: browser.md  docs.md  gui.md  src.md  tests.md
review/final/: browser.md  docs.md  gui.md  refactoring_review.md  src.md  tests.md
review/sonnet/: browser.md  docs.md  gui.md  src.md  tests.md
src/: BenchMeasurerGuard.cpp  BrowserViewer.cpp  ContainerName.cpp  CryptoManager.cpp  DecryptPipeline.cpp  EncryptPipeline.cpp  FileManager.cpp  FileTable.cpp  Header.cpp  KdfProfiles.cpp  Logger.cpp  NativeFile.cpp  PasswordStrengthEstimator.cpp  main.cpp
src/cli/: args.cpp  args.h  benchmark.cpp  benchmark.h  commands.cpp  commands.h  help.cpp  help.h  password_io.cpp  password_io.h
tests/integration/: conftest.py  run_bit_flip_test.py  test_add.py  test_auth_decrypt_ordering.py  test_browser_viewer.py  test_capacity_overflow.py  test_container_naming.py  test_create.py  test_cross_mode.py  test_errors.py  test_extract.py  test_hash_algorithms.py  test_header_resilience.py  test_kdf_profiles.py  test_kuznechik.py  test_list.py  test_next_write_offset.py  test_roundtrip.py  test_roundtrip_100files.py  test_slot_byte_identity.py  test_strength_warning.py
tests/unit/: test_browser_viewer.cpp  test_native_file.cpp  test_password_strength.cpp  test_scef.cpp
